projetos/desafio-final-dk8s/semana-1/aws/ingress/ingress-api-contas-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tipsbank-contas-admin-ingress
  namespace: tipsbank-contas
  labels:
    app: api-contas
    kubernetes.io/name: api-contas-admin
    kubernetes.io/part-of: tipsbank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "TipsBank Admin"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.tipsbank.staypuff.info
  rules:
    - host: api.tipsbank.staypuff.info
      http:
        paths:
          - path: /contas/admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-contas
                port:
                  number: 8080
