projetos/desafio-final-dk8s/semana-1/aws/ingress/ingress-api-transacoes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tipsbank-api-transacoes
  namespace: tipsbank-transacoes
  labels:
    app: api-transacoes
    kubernetes.io/name: api-transacoes
    kubernetes.io/part-of: tipsbank
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "TIPSBANK_AFFINITY"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    cert-manager.io/cluster-issuer: "prod-letsencrypt-cloudflare"
spec:
  ingressClassName: nginx
  spec:
  tls:
    - hosts:
        - api.tipsbank.staypuff.info
      secretName: api-tipsbank-tls
  rules:
    - host: api.tipsbank.staypuff.info
      http:
        paths:
          - path: /transacoes(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-transacoes
                port:
                  number: 8080
